<resources>
    <string name="app_name">ShopperBeta</string>

    <!-- GENERAL SCREENS -->
    <string name="emailText">Email</string>
    <string name="passwordText">Password</string>
    <string name="passwordConfirmText">Confirm Password</string>
    <string name="cancelText">Cancel</string>
    <string name="errorText">ERROR</string>
    <string name="emptyText" />

    <!-- ALERT DIALOGS TEXT -->
    <!-- NEW LIST -->
    <string name="builderNewListText">New List</string>
    <string name="builderAddEditViewHintText">Give a nice name to your list</string>
    <string name="builderNegativeButtonText">Cancel</string>
    <string name="builderPositiveAddButtonText">Add</string>
    <!-- UPDATE LIST -->
    <string name="builderUpdateListText">Update List</string>
    <string name="builderUpdateEditViewHintText">Give a new name to this list</string>
    <string name="builderPositiveUpdateButtonText">Update</string>

    <!-- SHARE LIST  -->
    <string name="builderShareListText">Share List</string>
    <string name="builderShareEditHintText">Your friend email to share this list</string>
    <string name="builderPositiveShareButtonText">Share</string>

    <!-- NEW ELEMENT -->
    <string name="builderNewElementText">New Element</string>
    <string name="buildNewElementHintText">Element Name</string>
    <string name="builderAddElementPositiveButtonText">Add Element</string>

    <!-- UPDATE ELEMENT -->
    <string name="builderUpdateElementText">Update Element</string>
    <string name="buildUpdateElementHintText">Give this element a new name</string>
    <string name="builderUpdateElementPositiveButtonText">Update Element</string>

    <!-- SET DISPLAY NAME -->
    <string name="builderSetDisplayNameText">Set your nickname</string>
    <string name="builderSetDisplayNameHint">Nickname</string>
    <string name="builderSetDisplayNameButtonText">Set</string>


    <!-- REGISTER SCREEN -->
    <string name="registerTitleText">Create a Shopper account</string>
    <string name="registerButtonText">Register</string>
    <string name="errorPasswordDontMatch">Password do not match.</string>
    <string name="errorEmptyFields">Empty or invalid data was introduced.</string>
    <!-- LOGIN SCREEN -->
    <string name="loginButtonText">Login</string>
    <string name="loginRegisterText">You don\'t have an account? Register here!</string>
    <string name="loginGoogleButtonText">Login with google</string>
    <string name="loginGoogleButtonImageDescription">Google logo acting as an icon.</string>
    <string name="errorLoginMessage">Email or password are incorrect</string>
    <!-- HOME SCREEN -->
    <string name="usernameText">USERNAME</string>
    <string name="userLists">User Lists</string>
    <string name="newListButtonText">New List</string>
    <string name="homeEmptyListText">Empty List</string>
    <string name="imgProfileIconContentDescription">Profile icon</string>
    <string name="buttonHomeLogout">Logout</string>

    <!-- ELEMENTS SCREEN -->
    <string name="createdByText">Created By %s</string>
    <string name="lblElementsListName">LIST NAME</string>
    <string name="buttonElementsAddText">ADD</string>
    <string name="buttonShareContentDescription">Share icon</string>
    <string name="toastShareSuccessShared">You shared this list!</string>
    <string name="toastShareUserNotFound">User is not registered in Shopper</string>
    <string name="toastShareEmptyEmail">User Email is empty</string>

    <!-- ITEM ELEMENT LAYOUT -->
    <string name="itemElementName">ElementName</string>
    <string name="itemElementAuthor">ElementAuthor</string>


</resources>