<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/lblRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="177dp"
        android:text="@string/registerTitleText"
        android:textColor="#039BE5"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayRegister"
        android:layout_width="409dp"
        android:layout_height="400dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRegisterTitle">

        <TextView
            android:id="@+id/lblRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailText"
            android:textAlignment="center"
            android:textColor="@color/astronautDark1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editRegisterEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/cornflowerBlueDark1"
            android:ems="10"
            android:hint="@string/emailText"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/errorRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/emptyText"
            android:textColor="@color/orangeDark3"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/lblRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordText"
            android:textAlignment="center"
            android:textColor="@color/astronautDark1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editRegisterPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:autofillHints="password"
            android:backgroundTint="@color/cornflowerBlueDark1"
            android:ems="10"
            android:hint="@string/passwordText"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/errorRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/emptyText"
            android:textColor="@color/orangeDark3"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/lblRegisterConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordConfirmText"
            android:textAlignment="center"
            android:textColor="@color/astronautDark1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editRegisterConfirmPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="password"
            android:backgroundTint="@color/cornflowerBlueDark1"
            android:ems="10"
            android:hint="@string/passwordConfirmText"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/errorRegisterConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/emptyText"
            android:textColor="@color/orangeDark3"
            android:textAlignment="center" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:text="@string/registerButtonText"
        android:textStyle="bold"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonRegisterCancel"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRegisterCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="92dp"
        android:textStyle="bold"
        android:text="@string/cancelText"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>