<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/imgLoginLogo"
        android:layout_width="412dp"
        android:layout_height="194dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_main_logo"
        android:contentDescription="@string/loginGoogleButtonImageDescription" />

    <View
        android:id="@+id/separatorLoginTop"
        android:layout_width="380dp"
        android:layout_height="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="16dp"
        android:background="@color/astronautBright2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLoginLogo" />

    <LinearLayout
        android:id="@+id/linearLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separatorLoginTop">

        <EditText
            android:id="@+id/editLoginEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/cornflowerBlueDark1"
            android:ems="10"
            android:hint="@string/emailText"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:layout_marginBottom="10dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editLoginPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:backgroundTint="@color/cornflowerBlueDark1"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:hint="@string/passwordText"
            android:autofillHints="password"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/errorLogin"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textColor="@color/orangeDark3"
            android:textAlignment="center"
            android:textStyle="bold"
            />

    </LinearLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="166dp"
        android:text="@string/loginButtonText"
        android:textStyle="bold"
        android:backgroundTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutLogin" />

    <TextView
        android:id="@+id/buttonLoginRegisterLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="184dp"
        android:text="@string/loginRegisterText"
        android:textStyle="bold"
        android:textColor="@color/orangeDark2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <View
        android:id="@+id/separatorLoginBottom"
        android:layout_width="380dp"
        android:layout_height="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:background="@color/astronautBright2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginRegisterLbl" />

    <Button
        android:id="@+id/buttonLoginGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="160dp"
        android:backgroundTint="@color/astronautBright2"
        android:text="@string/loginGoogleButtonText"
        android:textColor="@color/cornflowerBlueBright3"
        android:textStyle="bold"
        app:icon="@drawable/ic_googlelogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separatorLoginBottom" />

</androidx.constraintlayout.widget.ConstraintLayout>